# raspicodething_rat

./: CMakeCache.txt  CMakeLists.txt  GRF.cpp  GRF.h  README.md  Test_GRF.cpp  Test_angle.cpp  arduinocodething_rat.ino  build.ninja  cmake_install.cmake  compile_commands.json  test.cpp
BNO08x_Pico_Library/: CMakeLists.txt  README.md
BNO08x_Pico_Library/include/: bno08x.h  bno08x2.h  utils.h  utils2.h
BNO08x_Pico_Library/sh2/: CMakeLists.txt
BNO08x_Pico_Library/sh2/include/: sh22.h  sh2_SensorValue2.h  sh2_err2.h  sh2_hal2.h  sh2_util2.h  shtp2.h
BNO08x_Pico_Library/sh2/src/: sh22.c  sh2_SensorValue2.c  sh2_util2.c  shtp2.c
BNO08x_Pico_Library/src/: bno08x.cpp  bno08x2.cpp  utils2.cpp
include/: Angle.h  GRF.h  Threading.h  btHandler.h  btstack_config.h
pico-sdk/: cmake_install.cmake
pico-sdk/docs/: cmake_install.cmake
pico-sdk/src/: cmake_install.cmake
pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
pico-sdk/src/common/hardware_claim/: cmake_install.cmake
pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
pico-sdk/tools/: cmake_install.cmake
src/: Angle.cpp  GRF.cpp  btHandler.c  hal_time.c  main.cpp
(+87 files in other folders)
